Adding Front List and Register, Fix db connection

--- a/backend/ormconfig.json
+++ b/backend/ormconfig.json
@@ -1,8 +1,9 @@
+  
 {
-    "type" : "sqllite",
+    "type": "sqlite",
     "host": "localhost",
-    "database": "database/sqlliteserver.db",
+    "database": "database/sqliteserver.db",
     "logging": true,
-    "synchronize" : true,
-    "entities": ["src/repository/*.ts"]
+    "synchronize": true,
+    "entities": ["src/*.ts"]
 }
